[package]
name = "commencement-tickets"
version = "0.1.0"
authors = ["Ty Coghlan <Coghlan.Ty@gmail.com>"]

[dependencies]
actix = "0.5"
actix-web = "0.4"
config = "0.8"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.1.0", features = ["sqlite", "chrono"] }
failure = "0.1"
futures = "0.1"
log = "0.4"
loggerv = "0.7"
num_cpus = "1.8"
rand = "0.4"
r2d2 = "0.8"
r2d2-diesel = "1.0"
serde = "1.0"
serde_derive = "1.0"
